--- a/Configs/example.toml
+++ b/Configs/example.toml
@@ -1,7 +1,7 @@
 name = "example"
 method = "GET"
 URL = "http://localhost:8080"
-bodypath = "example.json"
+bodypath = "discord.json"
 
 [headers]
 content-type = "application/json"
